objects/User.object
<CustomObject>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EH</fullName>
                </value>
                <value>
                    <fullName>DX</fullName>
                </value>
                <value>
                    <fullName>LST</fullName>
                </value>
                <value>
                    <fullName>Informatics</fullName>
                </value>
                <value>
                    <fullName>OneSource</fullName>
                </value>
                <value>
                    <fullName>Corp IT</fullName>
                </value>
                <value>
                    <fullName>Corp Legal</fullName>
                </value>
                <value>
                    <fullName>Corp Mrkt</fullName>
                </value>
                <value>
                    <fullName>Corp HR</fullName>
                </value>
                <value>
                    <fullName>Corp Operations</fullName>
                </value>
                <value>
                    <fullName>Corp Finance</fullName>
                </value>
                <value>
                    <fullName>Food Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>Employee’s role within PerkinElmer</description>
        <inlineHelpText>Employee’s role within PerkinElmer</inlineHelpText>
        <label>Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <label>Home City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Western Europe</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <description>Name given to local sales district. Lowest level of the Territory - Region - Sales Team hierarchy</description>
        <label>Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sales_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>US NE Team CT</fullName>
                </value>
                <value>
                    <fullName>US NE Team Mass</fullName>
                </value>
                <value>
                    <fullName>US NE Team NNJ</fullName>
                </value>
                <value>
                    <fullName>US NE Team CNJ</fullName>
                </value>
                <value>
                    <fullName>US NE Team Capital</fullName>
                </value>
                <value>
                    <fullName>US NE Team Penn</fullName>
                </value>
                <value>
                    <fullName>US SE Team Florida</fullName>
                </value>
                <value>
                    <fullName>US SE Team Atlanta</fullName>
                </value>
                <value>
                    <fullName>US SE Team Tennessee</fullName>
                </value>
                <value>
                    <fullName>US SE Team Texas</fullName>
                </value>
                <value>
                    <fullName>US10 AS MidWest</fullName>
                </value>
                <value>
                    <fullName>US MW Team Pittsburgh</fullName>
                </value>
                <value>
                    <fullName>US10 AS West</fullName>
                </value>
                <value>
                    <fullName>US West Team Henrickson</fullName>
                </value>
                <value>
                    <fullName>CA10 Analytical</fullName>
                </value>
                <value>
                    <fullName>CA10 LS Instrument</fullName>
                </value>
                <value>
                    <fullName>CA10 Reagents</fullName>
                </value>
                <value>
                    <fullName>Northern - EMEA - Islands</fullName>
                </value>
                <value>
                    <fullName>Central - EMEA - Islands</fullName>
                </value>
                <value>
                    <fullName>Southern - EMEA - Islands</fullName>
                </value>
                <value>
                    <fullName>UK GDS</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Ben/Nordics GDS</fullName>
                </value>
                <value>
                    <fullName>Germany North East</fullName>
                </value>
                <value>
                    <fullName>Germany South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub-Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>EUROPE</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>KOREA, REPUBLIC OF</fullName>
                </value>
                <value>
                    <fullName>KOSEA</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>SOUTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>SOUTH ASIA</fullName>
                </value>
                <value>
                    <fullName>SOUTH PAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Unique__c</fullName>
        <description>Field is used to generate unique user counts on various reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>at_TeamRole__c</fullName>
        <label>TeamRole</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Codes__c</fullName>
        <description>This is a comma separated list of codes that are used with Lightning page layouts in order to filter visibility</description>
        <inlineHelpText>For Admin use Only. Comma separated value list</inlineHelpText>
        <label>Filter Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <label>Home Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_type__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <description>One level above local Sales Team and one level below Territory</description>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Benelux</fullName>
                </value>
                <value>
                    <fullName>CA10 AS Canada</fullName>
                </value>
                <value>
                    <fullName>CA10 Molecular</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
                <value>
                    <fullName>DEA Cluster</fullName>
                </value>
                <value>
                    <fullName>DX EMEA Export</fullName>
                </value>
                <value>
                    <fullName>DX EMEA Support</fullName>
                </value>
                <value>
                    <fullName>EBE2 Belgium</fullName>
                </value>
                <value>
                    <fullName>ECH2 / EES2 / EFR2 - Leader</fullName>
                </value>
                <value>
                    <fullName>ECH2 Switzerland</fullName>
                </value>
                <value>
                    <fullName>EES2 Spain</fullName>
                </value>
                <value>
                    <fullName>EFR2 France</fullName>
                </value>
                <value>
                    <fullName>EIT2 Italy</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>GAE Group</fullName>
                </value>
                <value>
                    <fullName>GDS Americas</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Islands Cluster</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>JP/KR</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Manager__c</fullName>
        <description>[INF] - Used by FPX Firepond CPQ system and is hard coded so important to have and entry if the user is part of Informatics</description>
        <inlineHelpText>Used by FPX CPQ for Informatics</inlineHelpText>
        <label>Direct Manager</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>at_SalesOffice__c</fullName>
        <label>SalesOffice</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emerging_Market__c</fullName>
        <label>Emerging Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_ISO_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Zip_Postal__c</fullName>
        <label>Home Zip/Postal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_SFDC_Group__c</fullName>
        <inlineHelpText>Field used to help filter the list of SFDC users according to their use of the software. Helpful when sending mass emails to groups of specific users</inlineHelpText>
        <label>User SFDC Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal User</fullName>
                    <default>true</default>
                    <label>Normal User</label>
                </value>
                <value>
                    <fullName>Power User</fullName>
                </value>
                <value>
                    <fullName>SBE Sales Operations</fullName>
                </value>
                <value>
                    <fullName>SBE Mrkt Operations</fullName>
                </value>
                <value>
                    <fullName>SBE Administrator</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_ISO_Code__c</fullName>
        <label>Country - ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN -AF</fullName>
                </value>
                <value>
                    <fullName>ALBANIA -AL</fullName>
                </value>
                <value>
                    <fullName>ALGERIA -DZ</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA -AS</fullName>
                </value>
                <value>
                    <fullName>ANDORRA -AD</fullName>
                </value>
                <value>
                    <fullName>ANGOLA -AO</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA -AI</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA -TF</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA -AQ</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA &amp; BARBUDA -AG</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA -AR</fullName>
                </value>
                <value>
                    <fullName>ARMENIA -AM</fullName>
                </value>
                <value>
                    <fullName>ARUBA -AW</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA -AU</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA -AT</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN -AZ</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS -BS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN -BH</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH -BD</fullName>
                </value>
                <value>
                    <fullName>BARBADOS -BB</fullName>
                </value>
                <value>
                    <fullName>BELARUS -BY</fullName>
                </value>
                <value>
                    <fullName>BELGIUM -BE</fullName>
                </value>
                <value>
                    <fullName>BELIZE -BZ</fullName>
                </value>
                <value>
                    <fullName>BENIN -BJ</fullName>
                </value>
                <value>
                    <fullName>BERMUDA -BM</fullName>
                </value>
                <value>
                    <fullName>BHUTAN -BT</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA -BO</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA -BA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA -BW</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND -BV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>at_ProvinceState__c</fullName>
        <label>ProvinceState</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC User account that cannot be deactivated can be marked as True. These SFDC User Accounts would be ignored during non-usage deactivation process</description>
        <label>Do Not Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Sales_Org__c</fullName>
        <description>Sales org for technician used in download criteria for product stock</description>
        <inlineHelpText>Sales org for technician used in download criteria for product stock</inlineHelpText>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_GBL_Job_Family__c</fullName>
        <label>Job Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Leadership</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Emerging Technologies</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>MarComm/Corp Comm</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Product/Program Mgt</fullName>
                </value>
                <value>
                    <fullName>RD + Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserTimezoneOffset__c</fullName>
        <description>This uses logic to determine what timezone a user is in so formulas can react accordingly.</description>
        <formula>(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 01:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 02:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 03:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 04:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 05:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 06:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 07:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 08:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 09:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 10:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 11:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 12:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 13:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 14:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 15:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 16:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 17:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 18:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 19:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 20:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 21:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 22:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 23:00:00&quot;)) - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserTimezoneOffset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_State_Province__c</fullName>
        <label>Home State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_GBL_User_Frozen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate if user is frozen</description>
        <label>User Frozen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Studio_Filter__c</fullName>
        <label>Quote Studio Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CompanyCode__c</fullName>
        <description>Used to limit Stock Transfer to a Technician&apos;s Company Code.</description>
        <inlineHelpText>Used to limit Stock Transfer to a Technician&apos;s Company Code.</inlineHelpText>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_GBL_Sub_function__c</fullName>
        <label>Sub-function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PKI_GBL_Job_Family__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin + Site Support</fullName>
                </value>
                <value>
                    <fullName>Admin Leadership</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Emerging Technologies</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>FPA</fullName>
                </value>
                <value>
                    <fullName>Investor Relations</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Treasury</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>IT Applications</fullName>
                </value>
                <value>
                    <fullName>IT E-Business</fullName>
                </value>
                <value>
                    <fullName>IT Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Regulatory Compliance</fullName>
                </value>
                <value>
                    <fullName>Corporate Communications</fullName>
                </value>
                <value>
                    <fullName>Customer Care (Mkt)</fullName>
                </value>
                <value>
                    <fullName>E-Business</fullName>
                </value>
                <value>
                    <fullName>MarComm/Marketing</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Facilities/Maint/Mfg Other</fullName>
                </value>
                <value>
                    <fullName>Health/Safety/Environmental</fullName>
                </value>
                <value>
                    <fullName>Lifecycle Engineering</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Direct</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Storage_Location__c</fullName>
        <label>SAP Storage Location</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deactivation_Comments__c</fullName>
        <label>Deactivation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Activating__c</fullName>
        <label>Reason for Activating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New User</fullName>
                </value>
                <value>
                    <fullName>Reactivation Request by Individual email</fullName>
                </value>
                <value>
                    <fullName>Reactivation Request through support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Deactivating__c</fullName>
        <label>Reason for Deactivating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last login more than 90 days</fullName>
                </value>
                <value>
                    <fullName>Employee Terminated</fullName>
                </value>
                <value>
                    <fullName>Duplicate User Account</fullName>
                </value>
                <value>
                    <fullName>Employee No Longer Need User Account</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKI_GBL_Previous_Profile__c</fullName>
        <description>Previous Profile the deactivated user previously had</description>
        <label>Previous Profile</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Maintenance_Plant__c</fullName>
        <description>Denotes the maintenance plant that the user has access to</description>
        <inlineHelpText>Denotes the maintenance plant that the user has access to</inlineHelpText>
        <label>Maintenance Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Sheet_Managers_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM - Blue Sheet Managers license for large org.</description>
        <label>Blue Sheet Managers License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blue_Sheet_Read_Only_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Blue Sheet licenses option for large orgs.</description>
        <label>Blue Sheet Read Only License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Tier_2_Dispatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provides access to the &apos;dispatch technician&apos; button for specific Tier 2 users</description>
        <inlineHelpText>Provides access to the &apos;dispatch technician&apos; button Tier 2 users</inlineHelpText>
        <label>Is Tier 2 Dispatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_be_deleted_IS_EU_COUNTRTY__c</fullName>
        <formula>OR(CONTAINS(Home_Country__c, &apos;Italy&apos;),CONTAINS(Home_Country__c, &apos;UK&apos;),CONTAINS(Home_Country__c,&apos;Deutschland&apos;),CONTAINS(Home_Country__c,&apos;France&apos;),
CONTAINS(Home_Country__c,&apos;Belgium&apos;),CONTAINS(Home_Country__c,&apos;Spain&apos;),CONTAINS(Home_Country__c,&apos;Poland&apos;),CONTAINS(Home_Country__c,&apos;Switzerland&apos;),
CONTAINS(Home_Country__c,&apos;FR&apos;),CONTAINS(Home_Country__c,&apos;VA&apos;),CONTAINS(Home_Country__c,&apos;DE&apos;),CONTAINS(Home_Country__c,&apos;Austria&apos;),
CONTAINS(Home_Country__c,&apos;United Kingdom&apos;),CONTAINS(Home_Country__c,&apos;GB&apos;),CONTAINS(Home_Country__c,&apos;Netherlands&apos;),
CONTAINS(Home_Country__c,&apos;Norway&apos;),CONTAINS(Home_Country__c,&apos;Finland&apos;),CONTAINS(Home_Country__c,&apos;Denmark&apos;),
CONTAINS(Home_Country__c,&apos;Sweden&apos;),CONTAINS(Home_Country__c,&apos;SE&apos;),CONTAINS(Home_Country__c,&apos;FI&apos;),
CONTAINS(Home_Country__c,&apos;The Netherlands&apos;),CONTAINS(Home_Country__c,&apos;NO&apos;),CONTAINS(Home_Country__c,&apos;Ireland&apos;),
CONTAINS(Home_Country__c,&apos;NE&apos;),CONTAINS(Home_Country__c,&apos;Brussels&apos;),CONTAINS(Home_Country__c,&apos;South Africa&apos;),
CONTAINS(Home_Country__c,&apos;IT&apos;),CONTAINS(Home_Country__c,&apos;Turkey&apos;),CONTAINS(Home_Country__c,&apos;DK&apos;),CONTAINS(Home_Country__c,&apos;Israel&apos;),
CONTAINS(Home_Country__c,&apos;IL&apos;),CONTAINS(Home_Country__c,&apos;EU&apos;),CONTAINS(Home_Country__c,&apos;Puerto Rico&apos;),CONTAINS(Home_Country__c,&apos;Gibraltar&apos;),
CONTAINS(Home_Country__c,&apos;Lebanon&apos;),CONTAINS(Home_Country__c,&apos;Estonia&apos;)



)</formula>
        <label>To be deleted IS EU COUNTRTY</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>